--- a/Image Croping Code/openCV_processing-checkpoint.ipynb
+++ b/Image Croping Code/openCV_processing-checkpoint.ipynb
@@ -310,7 +310,9 @@
     }
    ],
    "source": [
-    "file_path = r\"C:\\Users\\12348\\OneDrive\\Pictures\\try_man2.jpeg\"\n",
+    "# THE MAIN CODE TO RUN .",
+    "# SPECIFY THE PATH OF IMAGE HERE.
+    "# EXAMPLE  =  file_path = r\"C:\\Users\\12348\\OneDrive\\Pictures\\try_man2.jpeg\"\n",
     "temp = cv2.imread(file_path)\n",
     "img4 = cv2.resize(img, (800, 800))\n",
     "\n",
